--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=library-service
+
+#Scheduller
+notifications.cron=0 0 9 * * *
+
+# SMTP
+spring.mail.host=mail.itq-group.com
+spring.mail.port=587
+spring.mail.username=chatbot@itq-group.com
+spring.mail.password=tU4TfKCnvZ-NCC8xsHqzwC0-e
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=mail.itq-group.com
