подключила бд, создала схемы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,27 @@
 spring.application.name=library-service
 
+# Datasource
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:library-db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Hibernate (JPA)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#liquibase
+spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
+spring.liquibase.default-schema=
+spring.liquibase.liquibase-schema=
+
 #Scheduller
 notifications.cron=0 0 9 * * *
 
