--- a/src/main/resources/db.changelog/db.changelog-master.yaml
+++ b/src/main/resources/db.changelog/db.changelog-master.yaml
@@ -4,5 +4,7 @@ databaseChangeLog:
   - include:
       file: db.changelog/changeset/create_subscription_table.xml
   - include:
-      file: db.changelog/changeset/create_borrowed_book_table.xml
+      file: db.changelog/changeset/create_accounting_book_table.xml
+  - include:
+      file: db.changelog/changeset/fill_tables.sql
 
