Поправила отправку на почту

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.liquibase.enabled=true
 
 #Scheduller
 notifications.cron=0 0 9 * * *
+scheduler.notification.interval=60000
 
 # SMTP
 spring.mail.host=mail.itq-group.com
@@ -33,3 +34,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=mail.itq-group.com
+
+mail.from=chatbot@itq-group.com
