--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=false
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=mail.itq-group.com
-
 mail.from=chatbot@itq-group.com
+
+# Redis
+spring.redis.host=localhost
+spring.redis.port=6379
