--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,13 +36,10 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=mail.itq-group.com
 mail.from=chatbot@itq-group.com
 
-# Redis
-spring.redis.host=localhost
-spring.redis.port=6379
 
 #Kafka
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=chat-bot-group
+spring.kafka.consumer.group-id=library-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
